--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name1">Teszt</string>
-    <string name="app_name2">Szia</string>
-    <string name="app_name3">Sör</string>
+    <string name="app_name">Teszt</string>
+    <string name="hello">Szia</string>
+    <string name="drink">Sör</string>
 </resources>
